[package]
name = "vycc"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"         # For lexical analysis
pest = "2"          # For parsing
pest_derive = "2"   # For deriving parsers from grammar
thiserror = "1"     # For error handling
serde = { version = "1", features = ["derive"] } # For serializing/deserializing AST
serde_json = "1"    # For JSON support
logos = "0.14.0"